--- a/sections/sec_7_1.tex
+++ b/sections/sec_7_1.tex
@@ -15,7 +15,7 @@
     Hence there is an $f:A \to \a+1$ that is bijective.
     We then simply re-order $A$ according to $\a+1$, i.e. we create the following order on $A$:
     $$
-    R = \braces{(a,b) \in A \times A \where f(a) < f(b)}
+      R = \braces{(a,b) \in A \times A \where f(a) < f(b)}
     $$
     so that clearly $(A, R)$ is isomorphic to $(\a+1, <)$.
   }
@@ -35,8 +35,8 @@
 
 \exercise{2}{
   If $\a$ and $\b$ are at most countable ordinals then $\a + \b$, $\a \cdot \b$, and $\a^\b$ are at most countable.
-  [Hint: Use the representation of ordinal operations from Theorems~5.3 and 5.8 and Exercise~5.16 in Chapter~6.
-    Another possibility is a proof by transfinite induction.]
+    [Hint: Use the representation of ordinal operations from Theorems~5.3 and 5.8 and Exercise~5.16 in Chapter~6.
+      Another possibility is a proof by transfinite induction.]
 }
 \sol{
   First we show that $\a + \b$ is at most countable.
@@ -44,7 +44,7 @@
     First we define two sets:
     \ali{
       W_1 &= \braces{(0,\g) \where \g \in \a} &
-      W_2 &= \braces{(1,\g) \where \g \in \b} \,.
+      W_2 &= \braces{(1,\g) \where \g \in \b}.
     }
     We also define the order $<_1$ on $W_1$ so that $(0,\g) <_1 (0,\d)$ if and only if $\g < \d$ for $(0, \g)$ and $(0, \d)$ in $W_1$ (so that $\g$ and $\d$ are in $\a$).
     Similarly we define the order $<_2$ on $W_2$ so that $(1,\g) <_2 (1,\d)$ if and only if $\g < \d$ for $(1, \g)$ and $(1, \d)$ in $W_2$ (so that $\g$ and $\d$ are in $\b$).
@@ -78,7 +78,7 @@
     Hence there is a natural number $n$ such that $s(f)$ can be expressed as an increasing sequence $h: n \to s(f)$.
     We now define another sequence $t: n \to \a \cdot \b$ by
     $$
-    t(k) = \a \cdot h(k) + f(h(k))
+      t(k) = \a \cdot h(k) + f(h(k))
     $$
     for $k \in n$.
     We then set $g(f) = t$.
@@ -92,7 +92,7 @@
       t(k) &= \a \cdot h(k) + f(h(k)) \\
       &< \a \cdot h(k) + \a & \text{(by Lemma~6.5.4)} \\
       &= \a \cdot (h(k) + 1) & \text{(by Definition~6.5.6b)} \\
-      &\leq \a \cdot \b \,. & \text{(by Exercise~6.5.7 since $\a \neq 0$)}
+      &\leq \a \cdot \b. & \text{(by Exercise~6.5.7 since $\a \neq 0$)}
     }
     Hence $t(k) < \a \cdot \b$ so that $t(k) \in \a \cdot \b$.
     Thus $t: n \to \a \cdot \b$ and since clearly this sequence is finite it follows that $t \in \seqab$.
@@ -147,7 +147,7 @@
     }
     and $t_1 \neq t_2$.
     The final sub-case in which $k_1 > k_2$ is analogous.
-    
+
     Hence in all cases and sub-cases $g(f_1) = t_1 \neq t_2 = g(f_2)$, which shows that $g$ is injective.
     From this it follows from Definition~4.1.4 that $\abs{\sba} \leq \abs{\seqab}$.
     However, from what was shown above it follows that $\a \cdot \b$ is at most countable since $\a$ and $\b$ are.
@@ -158,7 +158,7 @@
 
 \exercise{3}{
   For any set $A$, there is a mapping of $\pset{A \times A}$ onto $h(A)$.
-  [Hint: Define $f(R) =$ the ordinal isomorphic to $R$, if $R \ss A \times A$ is a well-ordering of its field; $f(R) = 0$ otherwise.]
+    [Hint: Define $f(R) =$ the ordinal isomorphic to $R$, if $R \ss A \times A$ is a well-ordering of its field; $f(R) = 0$ otherwise.]
 }
 \sol{
   \begin{lem}\label{lem:aleph:pset:sslt}
@@ -181,10 +181,10 @@
     If $R$ is a well-ordering of some $X \ss A$ then by Theorem~6.3.1 there is a unique ordinal $\a$ such that $(X, R)$ is isomorphic to $\a$.
     We then set
     $$
-    f(R) = \begin{cases}
-      \a & \text{$R$ is a well-ordering of some $X \ss A$} \\
-      0 & \text{$R$ is not a well-ordering of any $X \ss A$} \\
-    \end{cases} \,.
+      f(R) = \begin{cases}
+        \a & \text{$R$ is a well-ordering of some $X \ss A$}    \\
+        0  & \text{$R$ is not a well-ordering of any $X \ss A$} \\
+      \end{cases}.
     $$
 
     First we show that $f(R)$ really is in $h(A)$ for any $R \in \pset{A \times A}$.
@@ -218,7 +218,7 @@
     But then $f$ considered as function from $h(A)$ to $X$ is a bijection so that $h(A)$ is equipotent to a subset of $A$, which contradicts the definition of the Hartogs number.
     Hence it must be that $\abs{h(A)} \nleq \abs{A}$ as desired.
   }
-  
+
   Note that this does not imply that $h(a) > \abs{A}$ without using the Axiom of Choice.
 
   \mainprob
@@ -234,7 +234,7 @@
 
 \exercise{5}{
   $\abs{h(A)} < \abs{\pset{\pset{A \times A}}}$ for all $A$.
-  [Hint: Prove that $\abs{\pset{h(A)}} \leq \abs{\pset{\pset{A \times A}}}$ by assigning to each $X \in \pset{h(A)}$ the set of all well orderings $R \ss A \times A$ for which the ordinal isomorphic to $R$ belongs to $X$.]
+    [Hint: Prove that $\abs{\pset{h(A)}} \leq \abs{\pset{\pset{A \times A}}}$ by assigning to each $X \in \pset{h(A)}$ the set of all well orderings $R \ss A \times A$ for which the ordinal isomorphic to $R$ belongs to $X$.]
 }
 \sol{
   \def\pha{\pset{h(A)}}
@@ -277,45 +277,45 @@
 
   (e) $\hs(A)$ exists for all $A$.
 
-  [Hint for part (e): Show that $\a \in \hs(A)$ if and only if $\a = 0$ or $\a = $ the ordinal isomorphic to $R$, where $R$ is a well-ordering of some partition of $A$ into equivalence classes.]
+    [Hint for part (e): Show that $\a \in \hs(A)$ if and only if $\a = 0$ or $\a = $ the ordinal isomorphic to $R$, where $R$ is a well-ordering of some partition of $A$ into equivalence classes.]
 }
 \sol{
-  \begin{lem}\label{lem:aleph:hs:onto}
-    If $A$ is a well-orderable set and $B$ is any other set, there is a function from $A$ onto $B$ if and only if $\abs{B} \leq \abs{A}$.
-  \end{lem}
-  \qproof{
-    Suppose that $R$ is a well-ordering of $A$.
+\begin{lem}\label{lem:aleph:hs:onto}
+  If $A$ is a well-orderable set and $B$ is any other set, there is a function from $A$ onto $B$ if and only if $\abs{B} \leq \abs{A}$.
+\end{lem}
+\qproof{
+Suppose that $R$ is a well-ordering of $A$.
 
-    $(\to)$ Suppose that $f$ is a function from $A$ onto $B$.
-    If $A$ is empty then clearly $B$ must be as well or else $f$ could not be onto.
-    Thus we have $\abs{B} = \abs{\es} = 0 \leq 0 = \abs{\es} = \abs{A}$.
-    So we can assume that $A$ is nonempty so that if $B$ is empty then $\abs{B} = \abs{\es} = 0 < \abs{A}$.
-    Hence we can assume that $B$ is nonempty as well.
+$(\to)$ Suppose that $f$ is a function from $A$ onto $B$.
+If $A$ is empty then clearly $B$ must be as well or else $f$ could not be onto.
+Thus we have $\abs{B} = \abs{\es} = 0 \leq 0 = \abs{\es} = \abs{A}$.
+So we can assume that $A$ is nonempty so that if $B$ is empty then $\abs{B} = \abs{\es} = 0 < \abs{A}$.
+Hence we can assume that $B$ is nonempty as well.
 
-    Then, for each $b \in B$, define the set $A_b = \braces{a \in A \where f(a) = b}$, which clearly not empty since $f$ is onto.
-    Then, since $R$ is a well-ordering of $A$ and $A_b \ss A$, there is a unique least element of $a_b$ of $A_b$ according to $R$.
-    We then define $g: B \to A$ by simply setting $g(b)  = a_b$ for any $b \in B$.
+Then, for each $b \in B$, define the set $A_b = \braces{a \in A \where f(a) = b}$, which clearly not empty since $f$ is onto.
+Then, since $R$ is a well-ordering of $A$ and $A_b \ss A$, there is a unique least element of $a_b$ of $A_b$ according to $R$.
+We then define $g: B \to A$ by simply setting $g(b)  = a_b$ for any $b \in B$.
 
-    We then claim that $g$ is injective.
-    So consider $b_1$ and $b_2$ in $B$ where $b_1 \neq b_2$.
-    Then since $a_{b_1} \in A_{b_1}$ clearly $f(a_{b_1}) = b_1$.
-    Similarly $f(a_{b_2}) = b_2$ so that clearly $a_{b_1} \neq a_{b_2}$ since $f$ is a function and $b_1 \neq b_2$.
-    Hence $g(b_1) = a_{b_1} \neq a_{b_2} = g(b_2)$, which shows that $g$ is injective since $b_1$ and $b_2$ were arbitrary.
-    Then by definition $\abs{B} \leq \abs{A}$ as desired.
+We then claim that $g$ is injective.
+So consider $b_1$ and $b_2$ in $B$ where $b_1 \neq b_2$.
+Then since $a_{b_1} \in A_{b_1}$ clearly $f(a_{b_1}) = b_1$.
+Similarly $f(a_{b_2}) = b_2$ so that clearly $a_{b_1} \neq a_{b_2}$ since $f$ is a function and $b_1 \neq b_2$.
+Hence $g(b_1) = a_{b_1} \neq a_{b_2} = g(b_2)$, which shows that $g$ is injective since $b_1$ and $b_2$ were arbitrary.
+Then by definition $\abs{B} \leq \abs{A}$ as desired.
 
-    $(\leftarrow)$ Now suppose that $\abs{B} \leq \abs{A}$ so that there is an injective $f: B \to A$.
-    If $B$ is empty then clearly it has to be that $\abs{B} = \abs{\es} = 0 \leq \abs{A}$ regardless of $A$.
-    So we can assume that $B$ is nonempty so that there is a $b \in B$.
-    Since $f$ is injective, the inverse $\inv{f}$ is a function from $\ran(f)$ onto $B$.
-    Now we construct a function $g: A \to B$ by setting
-    $$
-    g(x) = \begin{cases}
-      \inv{f}(x) & x \in \ran(f) \\
-      b & x \notin \ran(f)
-    \end{cases}
-    $$
-    for any $x \in A$.
-    It should be clear that $g$ maps $A$ onto $B$ since, for any $b \in B$, we have $f(b) \in \ran(f)$ (hence also $f(b) \in A$) so that $g(f(b)) = \inv{f}(f(b)) = b$.
+$(\leftarrow)$ Now suppose that $\abs{B} \leq \abs{A}$ so that there is an injective $f: B \to A$.
+If $B$ is empty then clearly it has to be that $\abs{B} = \abs{\es} = 0 \leq \abs{A}$ regardless of $A$.
+So we can assume that $B$ is nonempty so that there is a $b \in B$.
+Since $f$ is injective, the inverse $\inv{f}$ is a function from $\ran(f)$ onto $B$.
+Now we construct a function $g: A \to B$ by setting
+$$
+  g(x) = \begin{cases}
+    \inv{f}(x) & x \in \ran(f)    \\
+    b          & x \notin \ran(f)
+  \end{cases}
+$$
+for any $x \in A$.
+It should be clear that $g$ maps $A$ onto $B$ since, for any $b \in B$, we have $f(b) \in \ran(f)$ (hence also $f(b) \in A$) so that $g(f(b)) = \inv{f}(f(b)) = b$.
   }
 
   \mainprob
@@ -324,54 +324,54 @@
   The fact that $\hs(A)$ is nonzero is important since, for a non-empty set $A$, there is no function from $A$ onto $\es = 0$ so that $0$ is actually the least ordinal such that such a function does not exist!
   We also make note of the fact that, even for $A=\es$, the empty function $f = \es$ is a vacuously a function from $A$ onto $\es = 0$ so that $\hs(A) = 1$ anyway since there is no function from $A = \es$ onto $1 = \braces{0}$.
 
-  (a)
-  \qproof{
-    Suppose to the contrary that there \emph{is} a function $f$ from $A$ onto $\a$.
-    Then since $0 < \hs(A) \leq \a$ clearly $0 \in \hs(A)$ and $\hs(A) \ss \a$.
-    So we define a function $g : A \to \hs(A)$ by
-    $$
+(a)
+\qproof{
+  Suppose to the contrary that there \emph{is} a function $f$ from $A$ onto $\a$.
+  Then since $0 < \hs(A) \leq \a$ clearly $0 \in \hs(A)$ and $\hs(A) \ss \a$.
+  So we define a function $g : A \to \hs(A)$ by
+  $$
     g(a) = \begin{cases}
-      f(a) & f(a) \in \hs(A) \\
-      0 & f(a) \notin \hs(A)
-    \end{cases} \,.
-    $$
-    for any $a \in A$.
-    Clearly each $g(a) \in \hs(A)$ but we also claim that $g$ is onto.
-    To this end consider any $\b \in \hs(A)$.
-    Since $\hs(A) \ss \a$ we have that $\b \in \a$ also.
-    Then, since $f$ is onto $\a$ there is an $a \in A$ such that $f(a) = \b$.
-    Since $f(a) = \b \in \hs(A)$ it follows by definition that $g(a) = f(a) = \b$.
-    Since $\b$ was arbitrary this shows that $g$ is onto.
-    However, the existence of $g$  contradicts the definition of $\hs(A)$ so that it must be that there is no such function from $A$ onto $\a$.
-  }
+      f(a) & f(a) \in \hs(A)    \\
+      0    & f(a) \notin \hs(A)
+    \end{cases}.
+  $$
+  for any $a \in A$.
+  Clearly each $g(a) \in \hs(A)$ but we also claim that $g$ is onto.
+  To this end consider any $\b \in \hs(A)$.
+  Since $\hs(A) \ss \a$ we have that $\b \in \a$ also.
+  Then, since $f$ is onto $\a$ there is an $a \in A$ such that $f(a) = \b$.
+  Since $f(a) = \b \in \hs(A)$ it follows by definition that $g(a) = f(a) = \b$.
+  Since $\b$ was arbitrary this shows that $g$ is onto.
+  However, the existence of $g$  contradicts the definition of $\hs(A)$ so that it must be that there is no such function from $A$ onto $\a$.
+}
 
-  (b)
-  \qproof{
-    Suppose to the contrary that $\hs(A)$ is \emph{not} an initial ordinal so that there is an $\a < \hs(A)$ such that $\abs{\a} = \abs{\hs(A)}$.
-    Let $f$ then be a bijection from $\a$ onto $\hs(A)$.
-    Also since $\a < \hs(A)$ it follows from the definition of $\hs(A)$ that there is a function $g$ from $A$ onto $\a$ (since otherwise $\hs(A)$ would not be the \emph{least} such ordinal for which such a function does not exist).
-    But then $f \circ g$ is a function from $A$ onto $\hs(A)$, which contradicts the definition of $\hs(A)$.
-    Hence it has to be that $\hs(A)$ is in fact an initial ordinal.
-  }
+(b)
+\qproof{
+  Suppose to the contrary that $\hs(A)$ is \emph{not} an initial ordinal so that there is an $\a < \hs(A)$ such that $\abs{\a} = \abs{\hs(A)}$.
+  Let $f$ then be a bijection from $\a$ onto $\hs(A)$.
+  Also since $\a < \hs(A)$ it follows from the definition of $\hs(A)$ that there is a function $g$ from $A$ onto $\a$ (since otherwise $\hs(A)$ would not be the \emph{least} such ordinal for which such a function does not exist).
+  But then $f \circ g$ is a function from $A$ onto $\hs(A)$, which contradicts the definition of $\hs(A)$.
+  Hence it has to be that $\hs(A)$ is in fact an initial ordinal.
+}
 
-  (c)
-  \qproof{
-    Suppose to the contrary that $h(A) > \hs(A)$.
-    Then by the definition of $h(A)$ there is a subset $X \ss A$ such that $\hs(A)$ is equipotent to $X$.
-    So let $f$ be a bijection from $\hs(A)$ to $X$.
-    We then define a function $g : A \to \hs(A)$ by
-    $$
+(c)
+\qproof{
+  Suppose to the contrary that $h(A) > \hs(A)$.
+  Then by the definition of $h(A)$ there is a subset $X \ss A$ such that $\hs(A)$ is equipotent to $X$.
+  So let $f$ be a bijection from $\hs(A)$ to $X$.
+  We then define a function $g : A \to \hs(A)$ by
+  $$
     g(a) = \begin{cases}
-      \inv{f}(a) & a \in X \\
-      0 & a \notin X
+      \inv{f}(a) & a \in X    \\
+      0          & a \notin X
     \end{cases}
-    $$
-    for any $a \in A$, noting that $0 < \hs(A)$ so that $0 \in \hs(A)$.
-    Clearly $g$ is into $\hs(A)$ but we also claim that it is onto.
-    So consider any $\a \in \hs(A)$ and let $a = f(\a)$ so that $a \in X$ and therefore $a \in A$ since $X \ss A$.
-    We then have $g(a) = \inv{f}(a) = \inv{f}(f(\a)) = \a$ since $a \in X$.
-    Since $\a$ was arbitrary this shows that $g$ is onto.
-    However, the existence of $g$ contradicts the definition of $\hs(A)$ so that it must be that in fact $h(A) \leq \hs(A)$ as desired.
+  $$
+  for any $a \in A$, noting that $0 < \hs(A)$ so that $0 \in \hs(A)$.
+  Clearly $g$ is into $\hs(A)$ but we also claim that it is onto.
+  So consider any $\a \in \hs(A)$ and let $a = f(\a)$ so that $a \in X$ and therefore $a \in A$ since $X \ss A$.
+  We then have $g(a) = \inv{f}(a) = \inv{f}(f(\a)) = \a$ since $a \in X$.
+  Since $\a$ was arbitrary this shows that $g$ is onto.
+  However, the existence of $g$ contradicts the definition of $\hs(A)$ so that it must be that in fact $h(A) \leq \hs(A)$ as desired.
   }
 
   (d)
@@ -400,12 +400,12 @@
     Let $L$ be the least element of $P$ (which is also the least element of $P'$), which exists since $R$ is a well-ordering.
     Then let
     $$
-    L' = L \cup \parens{A - \bigcup P'} \,,
+      L' = L \cup \parens{A - \bigcup P'},
     $$
     i.e. $L'$ is the set containing the elements of $L$ and any elements of $A$ that are not covered in the initial segment $P'$.
     Then let
     $$
-    P'' = \braces{L'} \cup \parens{P' - \braces{L}} \,,
+      P'' = \braces{L'} \cup \parens{P' - \braces{L}},
     $$
     i.e. $P''$ is $P'$ but with $L$ replaced with $L'$.
     It is easy to show that $P''$ is a partition of $A$ and that it is isomorphic to $\g$ with the same ordering as $R$ except with $L$ replaced by $L'$.
@@ -416,7 +416,7 @@
     So suppose to the contrary that there is such a function $f$.
     We then define the set
     $$
-    E = \braces{(a,b) \in A \times A \where f(a) = f(b)} \,.
+      E = \braces{(a,b) \in A \times A \where f(a) = f(b)}.
     $$
     It is trivial to show that this is an equivalence relation on $A$ so that $A/E$ is a partition of $A$ by Theorem~4.4.7.
     Moreover let $g$ be the mapping from $A/E$ to $\a$ defined as follows: for any $B \in A/E$ let $g(B)$ be the least element of $\braces{f(x) \where x \in B}$, noting that $\braces{f(x) \where x \in B}$ contains only a single element since $B$ is an equivalence class where $f(x) = f(y)$ for any $x$ and $y$ in $B$.
