--- a/shared/cor_aleph_wonlegt.tex
+++ b/shared/cor_aleph_wonlegt.tex
@@ -21,7 +21,7 @@
     \aB \leq \aA \to \aA = \aB \\
     \aB \nleq \aA \lor \aA = \aB \\
     \lnot \parens{\aB \leq \aA \land \aA \neq \aB} \\
-    \lnot (\aB < \aA) \,,
+    \lnot (\aB < \aA),
   }
   thereby showing the contrapositive.
 }
