--- a/shared/lem_ord_expin_sups.tex
+++ b/shared/lem_ord_expin_sups.tex
@@ -3,7 +3,7 @@
   Also suppose that $\a_\n \leq \b_\n$ for every $\n < \g$.
   Then
   $$
-  \sup_{\n < \g} \a_\n \leq \sup_{\n < \g} \b_\n \,.
+    \sup_{\n < \g} \a_\n \leq \sup_{\n < \g} \b_\n.
   $$
 \end{lem}
 \qproof{
@@ -11,7 +11,7 @@
   Now consider any $\a \in A$ so that $\a = \a_\n$ for some $\n < \g$.
   We then have that
   $$
-  \a = \a_\n \leq \b_\n \leq \sup{B}
+    \a = \a_\n \leq \b_\n \leq \sup{B}
   $$
   so that $\sup{B}$ is an upper bound of $A$ since $\a$ was arbitrary.
   It then follows from the least upper bound property that $\sup{A} \leq \sup{B}$ as desired.
