--- a/sections/sec_6_1.tex
+++ b/sections/sec_6_1.tex
@@ -9,12 +9,12 @@
     First, clearly $L = \reals$ is a linearly ordered set.
     So consider any $a \in S$ and any $x < a$ so that we have
     $$
-    x < a \leq 0 \,.
+      x < a \leq 0.
     $$
     Hence $x \in S$ also so that by definition $S$ is an initial segment of $\reals$.
     Now suppose that $S$ does have the form
     $$
-    S = \braces{x \in L \where x < a}
+      S = \braces{x \in L \where x < a}
     $$
     for some $a \in L$.
     Since $0 \leq 0$ clearly $0 \in S$ by the original definition so that by the above $0 < a$.
@@ -79,11 +79,11 @@
     }
     Since $f_1$ is an isomorphism and $f_1(k_1) = n \prec_1 m = f_1(l_1)$ it follows that
     $$
-    k_1 < l_1
+      k_1 < l_1
     $$
     and similarly since $f_2$ is an isomorphism and $f_2(l_2) = m \prec_2 n = f_2(k_2)$ it follows that
     $$
-    l_2 < k_2 \,.
+      l_2 < k_2.
     $$
     Now we claim that either $f_1(k_1) \neq f_2(k_1)$ or $f_1(l_1) \neq f_2(l_1)$.
     Either case shows that $F(\prec_1) = f_1 \neq f_2 = F(\prec_2)$ so that $F$ is injective.
@@ -91,14 +91,14 @@
     Then since $f_2$ is injective it follows that $k_1 = k_2$.
     Hence with the above we have
     $$
-    l_2 < k_2 = k_1 < l_1
+      l_2 < k_2 = k_1 < l_1
     $$
     so that $m = f_2(l_2) \prec_2 f_2(l_1)$ and hence $m \neq f_2(l_1)$.
     Thus we have $f_1(l_1) = m \neq f_2(l_1)$ so that the disjunction is shown (since $\lnot P \to Q \equiv P \lor Q$) and $F$ is injective.
 
     Hence since $F: R \to \nats^\nats$ is injective we have that
     $$
-    |R| \leq |\nats^\nats| = \cnats^\cnats = \ccont
+      |R| \leq |\nats^\nats| = \cnats^\cnats = \ccont
     $$
     by Theorem~5.2.2c.
 
@@ -107,13 +107,13 @@
     So for any infinite sequence $a \in 2^\nats$ we define an $f \in \nats^\nats$ by
     \ali{
       f(2n) &= \begin{cases}
-        2n & a_n = 0 \\
+        2n   & a_n = 0 \\
         2n+1 & a_n = 1
       \end{cases}
       &
       f(2n+1) &= \begin{cases}
-        2n+1 & a_n = 0 \\
-        2n & a_n = 1 \,.
+        2n+1 & a_n = 0  \\
+        2n   & a_n = 1.
       \end{cases}
     }
     for $n \in \nats$, i.e we swap $2n$ and $2n+1$ if $a_n = 1$ and leave them alone if $a_n = 0$.
@@ -125,7 +125,7 @@
     Without loss of generality we can assume that $a_n = 0 \neq 1 = b_n$.
     Then we have
     $$
-    f(2n) = 2n \neq 2n+1 = g(2n)
+      f(2n) = 2n \neq 2n+1 = g(2n)
     $$
     since $a_1 = 0$ but $b_n = 1$.
     Hence $f \neq g$ so that $G$ is injective, from which it follows that $|2^\nats| \leq |B|$.
@@ -133,7 +133,7 @@
     Lastly we construct an injective $H : B \to R$.
     So for an $f \in B$ define
     $$
-    \prec = \braces{(f(n), f(m)) \where (n,m) \in \nats \times \nats \land n < m}
+      \prec = \braces{(f(n), f(m)) \where (n,m) \in \nats \times \nats \land n < m}
     $$
     and set $H(f) = \prec$.
     Clearly by definition since $f$ is bijective it is an isomorphism from $(\nats, <)$ to $(\nats, \prec)$.
@@ -149,7 +149,7 @@
 
     Putting this together results in
     $$
-    \ccont = |2^\nats| \leq |B| \leq |R| \,.
+      \ccont = |2^\nats| \leq |B| \leq |R|.
     $$
     It then follows from the \cbthrm{} that $|R| = \ccont$ as desired.
   }
@@ -164,9 +164,9 @@
     Then $(A, <)$ (where $<$ is the standard well-ordering of $\nats$) is a well-ordering since any $B \ss A$ is also a subset of $\nats$ and therefore has a least element.
     Hence by Theorem~6.1.3 either:
     \begin{enumerate}
-    \item $(A,<)$ and $(\nats,<)$ are isomorphic,
-    \item An initial segment of $(A,<)$ is isomorphic to $(\nats,<)$, or
-    \item $(A,<)$ is isomorphic to an initial segment of $(\nats,<)$
+      \item $(A,<)$ and $(\nats,<)$ are isomorphic,
+      \item An initial segment of $(A,<)$ is isomorphic to $(\nats,<)$, or
+      \item $(A,<)$ is isomorphic to an initial segment of $(\nats,<)$
     \end{enumerate}
     We show that they must be isomorphic (1) by showing that (2) and (3) lead to contradictions.
 
@@ -210,10 +210,10 @@
     First, since $(W_1, <_1)$ and $(W_2, <_2)$ are both isomorphic to $(\nats, <)$ let $f_1 : W_1 \to \nats$ and $f_2 : W_2 \to \nats$ be isomorphisms.
     Now we define $g : W \to \w + \w$ by
     $$
-    g(w) = \begin{cases}
-      f_1(w) & w \in W_1 \\
-      \w + f_2(w) & w \in W_2
-    \end{cases}
+      g(w) = \begin{cases}
+        f_1(w)      & w \in W_1 \\
+        \w + f_2(w) & w \in W_2
+      \end{cases}
     $$
     for $w \in W = W_1 \cup W_2$, noting that $g$ is well defined since $W_1$ and $W_2$ are disjoint.
     Clearly since $\ran(f_1) = \ran(f_2) = \nats$ we have that $g(w) \in \w + \w$ for all $w \in W$.
@@ -258,7 +258,7 @@
     Suppose that $\prec$ is the lexicographic ordering of $\nats \times \nats$.
     Now we define $f: \nats \times \nats \to \w \cdot \w$ by
     $$
-    f(n,m) = \w \cdot n + m
+      f(n,m) = \w \cdot n + m
     $$
     for any $(n,m) \in \nats \times \nats$.
     Clearly $f(n,m) \in \w \times \w$.
@@ -298,10 +298,10 @@
     We then claim that $W'$ is isomorphic to $\b$.
     So define a $g : W' \to \b$ by
     $$
-    g(w) = \begin{cases}
-      f(w) & w \in W \\
-      \a & w \notin W
-    \end{cases}
+      g(w) = \begin{cases}
+        f(w) & w \in W    \\
+        \a   & w \notin W
+      \end{cases}
     $$
     for $w \in W'$.
     Clearly we have that $g(w) \in \b$ for any $w \in W'$.
@@ -339,7 +339,7 @@
 
     First we define $f : W \to \w$ by
     $$
-    f(n,m) = 2n + m
+      f(n,m) = 2n + m
     $$
     for $(n, m) \in W$.
     Clearly each $f(n,m) \in \nats = \w$.
@@ -357,24 +357,24 @@
     Then since $w_1 \prec w_2$ it has to be that $m_1 < m_2$, and since $m_1,m_2 \in \braces{0,1}$ it has to be that $m_1=0$ and $m_2 = 1$.
     From this it follows that
     $$
-    f(w_1) = f(n_1,m_1) = f(n_1,0) = 2n_1 < 2n_1 + 1 = 2n_2 + 1 = f(n_2,1) = f(n_2,m_2) = f(w_2) \,.
+      f(w_1) = f(n_1,m_1) = f(n_1,0) = 2n_1 < 2n_1 + 1 = 2n_2 + 1 = f(n_2,1) = f(n_2,m_2) = f(w_2).
     $$
 
     Case: $n_1 \neq n_2$.
     Then since $w_1 \prec w_2$ it has to be that $n_1 < n_2$.
     Then $n_1 + 1 \leq n_2$ and since also $m_1 < 2$ we have
     $$
-    f(w_1) = f(n_1, m_1) = 2n_1 + m_1 < 2n_1 + 2 = 2(n_1 + 1) \leq 2n_2 \leq 2n_2 + m_2 = f(n_1, m_2) = f(w_2) \,.
+      f(w_1) = f(n_1, m_1) = 2n_1 + m_1 < 2n_1 + 2 = 2(n_1 + 1) \leq 2n_2 \leq 2n_2 + m_2 = f(n_1, m_2) = f(w_2).
     $$
     Hence in all cases $f(w_1) < f(w_2)$ so that $f$ is increasing and therefore injective and isomorphic.
     Therefore $W$ is isomorphic to $\w$.
 
     Now we define $g: W' \to \w+\w$ by
     $$
-    g(n,m) = \begin{cases}
-      m & n = 0 \\
-      \w + m & n = 1
-    \end{cases}
+      g(n,m) = \begin{cases}
+        m      & n = 0 \\
+        \w + m & n = 1
+      \end{cases}
     $$
     for $(n,m) \in W'$.
     Clearly since $m \in \nats$ we have that $g(n,m) \in \w+\w$ for all $(n,m) \in W'$.
@@ -390,18 +390,18 @@
     Then since $w_1 \prec' w_2$ it has to be that $m_1 < m_2$.
     If $n_1 = n_2 = 0$ then
     $$
-    g(w_1) = g(n_1,m_1) = g(0,m_1) = m_1 < m_2 = g(0, m_2) = g(n_2,m_2) = g(w_2) \,.
+      g(w_1) = g(n_1,m_1) = g(0,m_1) = m_1 < m_2 = g(0, m_2) = g(n_2,m_2) = g(w_2).
     $$
     On the other hand if $n_1 = n_2 = 1$ then
     $$
-    g(w_1) = g(n_1,m_1) = g(1,m_1) = \w + m_1 < \w + m_2 = g(1, m_2) = g(n_2,m_2) = g(w_2) \,.
+      g(w_1) = g(n_1,m_1) = g(1,m_1) = \w + m_1 < \w + m_2 = g(1, m_2) = g(n_2,m_2) = g(w_2).
     $$
 
     Case: $n_1 \neq n_2$.
     Then since $w_1 \prec' w_2$ it has to be that $n_1 < n_2$.
     Moreover since $n_1,n_2 \in \braces{0,1}$ it has to be that $n_1 = 0$ and $n_2 = 1$ so that
     $$
-    g(w_1) = g(n_1,m_1) = g(0,m_1) = m_1 < \w + m_2 = g(1,m_2) = g(n_2,m_2) = g(w_2) \,.
+      g(w_1) = g(n_1,m_1) = g(0,m_1) = m_1 < \w + m_2 = g(1,m_2) = g(n_2,m_2) = g(w_2).
     $$
 
     Hence in all cases $g(w_1) < g(w_2)$ so that $g$ is increasing and therefore injective and an isomorphism.
