--- a/sections/sec_6_6.tex
+++ b/sections/sec_6_6.tex
@@ -17,6 +17,6 @@
     m_1 &= 3^{3^3} + 3^{3 + 1} + 3^3 - 1 = 3^{3^3} + 3^{3 + 1} + 3^2 \cdot 2 + 3 \cdot 2 + 2 \approx 7.626 \times 10^{12} \\
     m_2 &= 4^{4^4} + 4^{4 + 1} + 4^2 \cdot 2 + 4 \cdot 2 + 1 \approx 1.341 \times 10^{154} \\
     m_3 &= 5^{5^5} + 5^{5 + 1} + 5^2 \cdot 2 + 5 \cdot 2 \approx 1.911 \times 10^{2182} \\
-    m_4 &= 6^{6^6} + 6^{6 + 1} + 6^2 \cdot 2 + 6 \cdot 2 - 1 = 6^{6^6} + 6^{6 + 1} + 6^2 \cdot 2 + 6 + 5 \approx 2.659 \times 10^{36305} \,.
-  }  
+    m_4 &= 6^{6^6} + 6^{6 + 1} + 6^2 \cdot 2 + 6 \cdot 2 - 1 = 6^{6^6} + 6^{6 + 1} + 6^2 \cdot 2 + 6 + 5 \approx 2.659 \times 10^{36305}.
+  }
 }
